--- a/app.json
+++ b/app.json
@@ -15,23 +15,25 @@
   "env": {
     "KTMG_CHANNEL": {
       "description": "Name of the Twitch channel to monitor",
-      "value": "koalalorenzo"
+      "value": "koalalorenzo",
     },
     "KTMG_DISPLAY_TIME": {
       "description": "The amount of time an image should appear",
       "value": "10s"
     },
     "KTMG_WEBHOOK_ENABLE": {
-      "description": "Enable HTTP endpoint to queue memes. Use for custom integartion or manual tests.",
+      "description": "If set to true, enables an HTTP endpoint to queue memes. Use for custom integartion or manual tests.",
       "value": "false"
     },
     "KTMG_WEBHOOK_USERNAME": {
       "description": "(optional) Set the username for basic authentication. Leave empty to disable WebHook authentication",
-      "value": ""
+      "value": "",
+      "required": false
     },
     "KTMG_WEBHOOK_PASSWORD": {
       "description": "(optional) Set the password for basic authentication. Leave empty to disable WebHook authentication",
-      "value": ""
+      "generator": "secret",
+      "required": false
     }
   },
   "buildpacks": [
