adding make and git for the CI/CD pipeline dependencies
Signed-off-by: Lorenzo Setale <lorenzo@setale.me>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,9 @@ image: docker
 services:
   - docker:dind
 
+before_script:
+  - apk --no-cache add git make ca-certificates
+
 stages:
   - build
   - release
