authorization for gitlab docker registry
Signed-off-by: Lorenzo Setale <lorenzo@setale.me>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ services:
 
 before_script:
   - apk --no-cache add git make ca-certificates
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
 stages:
   - build
